# districts

./: README.md  pyproject.toml
src/districts/: Tamilnadu.csv  districts.py
