[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "districts"
version = "0.0.1"
authors = [
  { name="viji", email="vijisulochana14@gmail.com" },
]
description = "Package used to get districts details using districts names and pincodes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sulochanaviji/districts/src/districts"
"Bug Tracker" = "https://github.com/sulochanaviji/districts/issues/"


